overflow fix

--- a/app/(home)/page.module.scss
+++ b/app/(home)/page.module.scss
@@ -358,7 +358,8 @@
       }
       .cards {
         display: flex;
-        overflow: auto;
+        overflow-x: auto;
+        overflow-y: hidden;
         grid-gap: 2rem;
         padding: 0 2rem;
         padding-bottom: 1rem;
@@ -452,7 +453,8 @@
           }
         }
         &.blogs {
-          overflow: auto;
+          overflow-x: auto;
+          overflow-y: hidden;
           .cardsWrapper {
             margin: auto;
             padding: 1rem;
